infrastructure/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: pihole
spec:
  tls:
    - hosts:
        - pihole.internal.vkolobara.com
      secretName: cert
  rules:
    - host: pihole.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole
                port:
                  number: 80
